--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -282,7 +282,7 @@
 							<code><pre>
 
    const stream = await navigator.mediaDevices.getUserMedia({video:true, audio:true});
-   const filter = new BackgroundFilter(stream, {token: 'subpixel-token', {type: 'blur'});
+   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', {type: 'blur'});
    const outputStream =  filter.getOutput();
 					</pre></code>
 						</p>
@@ -292,7 +292,7 @@
 
 							<code><pre>
 
-   const filter = new BackgroundFilter(stream, {token: 'subpixel-token', {type: 'virtual', 'image': 'my-image-url.png'});
+   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', {type: 'virtual', 'image': 'my-image-url.png'});
 					</pre></code>
 						</p>
 
@@ -319,7 +319,7 @@
 						<pre><code>
    navigator.mediaDevices.getUserMedia({video:true, audio:true}).then(function(stream) {
 
-      const filter = new BackgroundFilter(stream, {token: 'insert-subpixel-token-here', type: 'blur'});
+      const filter = new BackgroundFilter(stream, {token: 'insert-vectorly-token-here', type: 'blur'});
       const outputStream =  filter.getOutput();  //Video Stream Track
    });
 
@@ -338,7 +338,7 @@
    const room = connection.initJitsiConference('conference', confOptions);
 
    JitsiMeetJS.createLocalTracks({devices: ['video']}).then(tracks => {
-      const filter = new BackgroundFilter(tracks[0], {token: 'insert-subpixel-token', type: 'blur'});
+      const filter = new BackgroundFilter(tracks[0], {token: 'insert-vectorly-token', type: 'blur'});
       room.addTrack(filter.getOutput());
    });
 
@@ -358,7 +358,7 @@
     let audioTrack = AgoraRTC.createMicrophoneAudioTrack();
 
 
-    const filter = new BackgroundFilter(videoTrack, {token: 'insert-subpixel-token-here', type: 'blur'});
+    const filter = new BackgroundFilter(videoTrack, {token: 'insert-vectorly-token-here', type: 'blur'});
     const filteredTrack = filter.getOutput();
     client.publish([filtedredTrack, audioTrack], handleFail);
 						</code></pre>
@@ -375,7 +375,7 @@
    const Video = require('twilio-video');
 
    Video.createLocalVideoTrack().then(function(videoTrack) {
-     const filter = new BackgroundFilter(videoTrack, {token: 'insert-subpixel-token', type: 'blur'});
+     const filter = new BackgroundFilter(videoTrack, {token: 'insert-vectorly-token', type: 'blur'});
 	 const filteredTrack = filter.getOutput();
 	//publish filteredTrack
    });
@@ -397,7 +397,7 @@
       height: '100%'
    }, handleError);
 
-   const filter = new BackgroundFilter(publisher.getVideoSource(), {token: 'insert-subpixel-token', type: 'blur'});
+   const filter = new BackgroundFilter(publisher.getVideoSource(), {token: 'insert-vectorly-token', type: 'blur'});
    publisher.setVideoSource(filter.getOutput());
 							</code></pre>
 
