--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -503,7 +503,7 @@
 						 </pre>
 
 
-						 <p>This automatically upscales the video, by overlaying a <code>canvas</code> element with the upscaled video frames on top of the <code>video</code> element. When the <code>video</code> plays, the upscaler will automatically upscale each frame and update the <code>canvas</code> element. See the <a href="#item-3-styling"> styling</a> section for more detail.</p>
+						 <p>This automatically upscales the video, by overlaying a <code>canvas</code> element with the upscaled video frames on top of the <code>video</code> element. When the <code>video</code> plays, the upscaler will automatically upscale each frame and update the <code>canvas</code> element. See the <a href="#item-upscale-styling"> styling</a> section for more detail.</p>
 
 
 
@@ -733,7 +733,7 @@
 
 					<h4>Custom plugin</h4>
 
-					You can easily build a plugin for Vectorly for any HTML5 video player. All you really need is the <code>video</code> tag, and the video container <code>div</code>, which contains the video UI elements and which is used for <a href="#item-3-styling">styling and layout</a>. See a demo plugin code, off of which our other HMTL5 Player plugins are based
+					You can easily build a plugin for Vectorly for any HTML5 video player. All you really need is the <code>video</code> tag, and the video container <code>div</code>, which contains the video UI elements and which is used for <a href="#item-upscale-styling">styling and layout</a>. See a demo plugin code, off of which our other HMTL5 Player plugins are based
 					<pre>
 							 <code>
    import UpscaleFilter from '@vectorly-io/ai-filters';
@@ -1218,7 +1218,7 @@ canvas.style.height = desiredheight + "px";
 						</figure>
 
 
-						<p>Our general AI upscaler filter generally achieves a 10 to 15 point VMAF improvement compared to bicubic scaling. With <a href="#item-1-3"> content-specific AI models</a>, or heavier models, we will likely be able to achieve further quality gains. We are currently working on releasing quality comparisons for content specific models.</p>
+						<p>Our general AI upscaler filter generally achieves a 10 to 15 point VMAF improvement compared to bicubic scaling. With <a href="#item-upscale-models"> content-specific AI models</a>, or heavier models, we will likely be able to achieve further quality gains. We are currently working on releasing quality comparisons for content specific models.</p>
 
 
 						<h5>Quality visualization</h5>
