added signup link

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -132,7 +132,7 @@
 
 
 
-							<p>When you get started, you'll get a <code>token</code> which, you will need to use the library. Next, you can install the ai-filters library via NPM or via CDN</p>
+							<p>When you <a href="https://upscaler.vectorly.io" target="_blank"> sign up</a>, you'll get a <code>token</code> which, you will need to use the library. Next, you can install the ai-filters library via NPM or via CDN</p>
 
 
 							<p> <b>NPM</b>
