Edited front page

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
 							    <div class="card-text">
 								    Brief introduction to the different AI filters, and how they are run in the browser
 							    </div>
-							    <a class="card-link-mask" href="docs-page.html#section-1"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-intro"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -109,9 +109,9 @@
 							        <span class="card-title-text">Background Filters</span>
 							    </h5>
 							    <div class="card-text">
-								    Hello world tutorial for getting started with upscaling on the web with VideoJS
+								    API documentation for our Web Backgrounds Filter SDK and integration instructions for different APIs.
 							    </div>
-							    <a class="card-link-mask" href="docs-page.html#section-2"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-background"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -125,9 +125,9 @@
 							        <span class="card-title-text">Upscaling (web) </span>
 							    </h5>
 							    <div class="card-text">
-								    API documentation for our Javascript libraries and HTML5 player plugins
+								    API documentation for our Javascript upscaler library and HTML5 player plugins
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-3"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-upscaling"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -143,7 +143,7 @@
 							    <div class="card-text">
 									API documentation for our Mobile AI Upscaler SDKs
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-4"></a>
+							    <a class="card-link-mask" href="docs-page.html#item-upscale-mobile"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -159,7 +159,7 @@
 							    <div class="card-text">
 								    Demos of AI Filters in the browser.
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-5"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-demos"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -175,7 +175,7 @@
 							    <div class="card-text">
 								    Performance benchmarks for Vectorly's Neural Network filters.
 								</div>
-							    <a class="card-link-mask" href="docs-page.html#section-6"></a>
+							    <a class="card-link-mask" href="docs-page.html#section-performance"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
