fixing minor errors

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -140,7 +140,7 @@
 							</p>
 
 							<p><b>CDN</b>
-								<code><pre>https://cdn.vectorly.io/v2/latest/ai-filters.js</pre></code>
+								<code><pre>https://cdn.vectorly.io/v2/latest/ai-filters.js</pre></code></p>
 						</section>
 
 
