--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -282,7 +282,7 @@
 							<code><pre>
 
    const stream = await navigator.mediaDevices.getUserMedia({video:true, audio:true});
-   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', {type: 'blur'});
+   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', type: 'blur'});
    const outputStream =  filter.getOutput();
 					</pre></code>
 						</p>
