Added virtual backgrounds feature

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -403,6 +403,63 @@
 
 					</section><!--//section-->
 
+<section>
+	<p>	<h2 class="section-heading" id="item-background-images">Starter Backgrounds</h2>
+	For convenience, if you're interested in adding a virtual backgrounds feature and need some starter images, here are a few:
+
+	</p>
+
+	<figure class="figure docs-figure py-3">
+
+		<div class="table-responsive my-4">
+			<table class="table" style="border-color: white">
+
+				<tbody >
+				<tr>
+
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/1.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/2.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/3.jpg" alt="" style="width: 300px;"></td>
+				</tr>
+				<tr style="text-align: center">
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/1.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/2.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/3.jpg</figcaption></td>
+				</tr>
+
+
+				<tr>
+
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/4.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/5.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/6.jpg" alt="" style="width: 300px;"></td>
+				</tr>
+				<tr style="text-align: center">
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/4.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/5.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/6.jpg</figcaption></td>
+				</tr>
+
+				<tr>
+
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/7.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/8.jpg" alt="" style="width: 300px;"></td>
+					<td style="border-top: white;"><img class="figure-img img-fluid" src="https://demo.vectorly.io/virtual-backgrounds/9.jpg" alt="" style="width: 300px;"></td>
+				</tr>
+				<tr style="text-align: center">
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/7.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/8.jpg</figcaption></td>
+					<td style="border-top: white;"><figcaption class="figure-caption mt-3">https://demo.vectorly.io/virtual-backgrounds/9.jpg</figcaption></td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+
+	</figure>
+
+
+</section>
+
 
 					<h2 class="section-heading" id="item-background-events">Events</h2>
 
