--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -93,6 +93,7 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-loading">Loading</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-basic-usage">Basic Usage</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-integration">Integration</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-images">Sample Images</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-events">Events</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-controls">Controls</a></li>
 
