Fixed syntax for loading via CDN

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -141,7 +141,7 @@
 							</p>
 
 							<p><b>CDN</b>
-								<code><pre>https://cdn.vectorly.io/v2/latest/ai-filters.js</pre></code></p>
+								<code><pre>https://cdn.vectorly.io/ai-filters/v1/latest/vectorly.filters.js</pre></code></p>
 						</section>
 
 
@@ -516,11 +516,18 @@
 
 						<h4 class="section-heading"  id="item-upscale-loading">Loading</h4>
 
-						<p>The basic API for loading the background filter via NPM is:
+						<p> The API for loading the Upscaler is</p>
+						<p><b>NPM</b>
 							<code><pre>
 
      import vectorlyUpscaler from @vectorly-io/ai-upscaler;
 					</pre></code>
+
+
+						<p>
+
+							<b>CDN</b>
+							<code><pre>https://cdn.vectorly.io/v2/latest/vectorly-upscaler.js</pre></code></p>
 
 						</p>
 
