--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -367,7 +367,7 @@
 
     const filter = new BackgroundFilter(videoTrack, {token: 'insert-vectorly-token-here', type: 'blur'});
     filter.getOutput(function(filteredTrack ){
-      client.publish([filtedredTrack, audioTrack], handleFail);
+      client.publish([filteredTrack, audioTrack], handleFail);
     });
 
 						</code></pre>
