More helpful vonage documentation

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -399,7 +399,7 @@
 
 						<p><b>Vonage / OpenTok</b></p>
 
-						<p>When you create a <code>Publisher</code> object, just feed that to the OpenTok plugin.
+						<p>When you create a <code>Publisher</code> object, just feed the filtered video Track as the video Source
 
 
 						<pre><code>
